--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.12",
-    "@angular/cdk": "^16.2.14",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.3.12",
     "@angular/core": "^17.3.12",
     "@angular/forms": "^17.3.12",
-    "@angular/material": "^16.2.14",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
@@ -40,6 +40,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.8",
     "@types/leaflet-routing-machine": "^3.2.8",
+    "@types/node": "^22.5.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
