--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "types": [
+      "node"
+    ],
     "lib": [
       "ES2022",
       "dom"
