--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+   "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -26,6 +26,7 @@
     "leaflet-routing-machine": "^3.2.12",
     "leaflet-textpath": "^1.2.3",
     "leaflet.icon.glyph": "^0.3.0",
+    "leaflet.markercluster": "^1.5.3",
     "ol": "^9.2.4",
     "pg": "^8.12.0",
     "rxjs": "~7.8.0",
@@ -40,6 +41,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.8",
     "@types/leaflet-routing-machine": "^3.2.8",
+    "@types/leaflet.markercluster": "^1.5.4",
     "@types/node": "^22.5.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
